select.result:   After revision of the fix for bug #7520. table.cc:   Revised the fix for bug #7520.   Made it compliant with 5.0 code where the bug does not exist.