sql/table.cc
@@ -143,7 +143,6 @@ int openfrm(const char *name, const char *alias, uint db_stat, uint prgflag,
     goto err_not_open; /* purecov: inspected */
   bzero((char*) keyinfo,n_length);
   outparam->key_info=keyinfo;
-  outparam->max_key_length= outparam->total_key_length= 0;
   key_part= my_reinterpret_cast(KEY_PART_INFO*) (keyinfo+keys);
   strpos=disk_buff+6;
 
@@ -199,11 +198,6 @@ int openfrm(const char *name, const char *alias, uint db_stat, uint prgflag,
       }
       key_part->store_length=key_part->length;
     }
-    set_if_bigger(outparam->max_key_length,keyinfo->key_length+
-		  keyinfo->key_parts);
-    outparam->total_key_length+= keyinfo->key_length;
-    if (keyinfo->flags & HA_NOSAME)
-      set_if_bigger(outparam->max_unique_length,keyinfo->key_length);
   }
   keynames=(char*) key_part;
   strpos+= (strmov(keynames, (char *) strpos) - keynames)+1;
@@ -486,7 +480,6 @@ int openfrm(const char *name, const char *alias, uint db_stat, uint prgflag,
 	    if (!(field->flags & BINARY_FLAG))
 	      keyinfo->flags|= HA_END_SPACE_KEY;
 	  }
-          set_if_bigger(outparam->max_key_length, keyinfo->key_length);
 	  if (i == 0 && key != primary_key)
 	    field->flags |=
 	      ((keyinfo->flags & HA_NOSAME) &&
@@ -547,6 +540,12 @@ int openfrm(const char *name, const char *alias, uint db_stat, uint prgflag,
 	}
       }
       keyinfo->usable_key_parts=usable_parts; // Filesort
+
+      set_if_bigger(outparam->max_key_length,keyinfo->key_length+
+		    keyinfo->key_parts);
+      outparam->total_key_length+= keyinfo->key_length;
+      if (keyinfo->flags & HA_NOSAME)
+        set_if_bigger(outparam->max_unique_length,keyinfo->key_length);
     }
     if (primary_key < MAX_KEY && 
 	(outparam->keys_in_use & ((key_map) 1 << primary_key)))
